# GAI4_course

./: .gitignore  .gitmodules  README.md  pyproject.toml
HW_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Evaluation.ipynb  README.md  history_pretrained.csv  history_scratch.csv  pyproject.toml  report.md
HW_1/deliverables/: 00_PrepData.html  01_TrainModel.html  02_Evaluation.html
HW_2/: 00_PrepData.html  00_PrepData.ipynb  01_DeepEnsemble_OOD.html  01_DeepEnsemble_OOD.ipynb  02_Autoencoder_OOD.html  02_Autoencoder_OOD.ipynb  GAI_HW_2_Ranzmaier.7z  README.md  pyproject.toml
Unit_0/: 00_Check_Environment.ipynb  01_Check_Data.ipynb  02_PrepData.ipynb  03_TrainModel.ipynb  04_Inference.ipynb  README.md  main.py  pyproject.toml
Unit_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Inference.ipynb  03_Debug_Model.ipynb  04_Inspect_GradCAM.ipynb  05_TrainModel_EarlyStop.ipynb  README.md  main.py  pyproject.toml
Unit_2/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_MC_Dropout.ipynb  03_DeepEnsemble_vs_MCDropout.ipynb  pyproject.toml
Unit_3/: 00_PrepData.ipynb  01_DenoisingAutoencoder.ipynb  02_AnomalyDetection.ipynb  README.md  main.py  pyproject.toml
Unit_4/: 00_FC_Autoencoder_2D.ipynb  01_FC_Autoencoder_3D.ipynb  02_VAE_2D.ipynb  032_VAE_3D_FIDS30.ipynb  03_VAE_3D.ipynb  04_LatentWalk_VAE.ipynb  05_LatentWalk_AE.ipynb  README.md  latents_ae_2d.npz  latents_ae_3d.npz  latents_vae_3d_fids30.npz  pyproject.toml
nlp_a3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
