[project]
name = "nlp-a6"
version = "0.1.0"
description = "NLP Assignment 6 - Prompting"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.7.1",
    "ipykernel>=6.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "pyarrow>=14.0.0",
    # Exercise 2 – LDA
    "gensim>=4.3.0",
    "nltk>=3.8.0",
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "datasets>=3.0.0",
    "nbformat>=5.10.4",
    "transformers>=5.0.0",
    "accelerate>=0.26.0",
    "flash_attn==2.7.4.post1; python_version < '3.12'",
    "vllm>=0.7.3",
    "tqdm>=4.65.0",
    "timm>=1.0.26",
    "nbconvert>=7.17.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
